added many pages with placeholder content

--- a/style.dev.css
+++ b/style.dev.css
@@ -302,15 +302,33 @@ body {
   margin: 0;
 }
 
-#nav_main {}
+main {
+  position: absolute;
+
+  top: 0px;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  overflow-y: scroll;
+  padding-top: 60px;
+}
+
+#nav_main {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 50;
+}
 
 .nav-bar {
-  background-color: #2b2b2b;
+  background-color: color(srgb 0.17 0.17 0.17 / 0.48);
   padding: 0.5rem;
-
   display: flex;
   justify-content: end;
   align-items: center;
+  backdrop-filter: blur(0.5rem);
+  box-shadow: 0px 0.25rem 1rem rgba(0, 0, 0, 0.25);
 }
 
 #nav_toggle {
@@ -346,6 +364,42 @@ body {
   transform: rotate(-45deg) translate(6px, -6px);
 }
 
+.nav-list {
+  margin: 0;
+  padding: 0;
+  height: 0px;
+  overflow-y: hidden;
+  transition: height 0.3s ease;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  background: #1a1a1a;
+  box-shadow: 0px 0.25rem 1rem rgba(0, 0, 0, 0.25);
+}
+
+.nav-item {
+  display: block;
+  width: 100%;
+  list-style: none;
+  margin: 0;
+}
+
+.nav-item a {
+  list-style-type: none;
+  text-decoration: none;
+  color: var(--grey);
+  font-family: 'RBNo3.1', sans-serif;
+  font-weight: 500;
+  padding: 1rem;
+  transition: color 0.3s ease;
+  display: block;
+  text-shadow: 0px 0.25rem 0.5rem rgba(0, 0, 0, 0.25);
+}
+
+.open .nav-list {
+  height: initial;
+}
 
 #logo {
   font-family: 'RBNo3.1 Book', sans-serif;
@@ -353,18 +407,21 @@ body {
   color: var(--dark);
   text-decoration: none;
   text-transform: uppercase;
+  /* filter: drop-shadow(2px 4px 6px rgba(0, 0, 0, 0.25)); */
 }
 
-#hero {
+.hero {
   padding: 2rem 1rem;
   text-align: center;
-  background: #161616;
+  background: #111111;
+  text-shadow: 2px 4px 6px rgba(0, 0, 0, 0.25);
   /* margin: 1rem; */
   /* border-radius: 0.5rem; */
 }
 
-#hero h3 {
+.hero h3 {
   text-transform: uppercase;
+  margin-top: 2rem;
 }
 
 .btn {
@@ -378,6 +435,8 @@ body {
   text-decoration: none;
   font-family: 'RBNo3.1', sans-serif;
   font-weight: 500;
+  box-shadow: 0px 0.25rem 0.5rem rgba(0, 0, 0, 0.25);
+  text-shadow: 0px .25rem .5rem rgba(0, 0, 0, 0.5);
 }
 
 .btn.btn-primary {
@@ -388,9 +447,15 @@ body {
 .content {
   padding: 1rem;
 }
-#services {
 
+#about {
+  /* background: #161616; */
+  padding: 2rem 1rem;
+  text-align: center;
 }
+
+#services {}
+
 #services h2 {
   /* text-align: center; */
   text-transform: uppercase;
@@ -398,6 +463,7 @@ body {
   font-weight: 500;
   /* margin-bottom: 2rem; */
 }
+
 #service_list {
   display: grid;
   grid-template-columns: 1fr;
@@ -408,8 +474,7 @@ body {
 
 .service {
   list-style-type: none;
-  margin-bottom: 1rem;
-  margin: 0;
+  margin-bottom: 0.5rem;
   background-size: cover;
   box-shadow: 0px .25rem .5rem rgba(0, 0, 0, 0.25);
   border-radius: 0.5rem;
@@ -419,7 +484,7 @@ body {
 
 .service a {
   background: linear-gradient(45deg, #2b2b2b, transparent);
-  padding: 1rem;
+  padding: 1.5rem 1rem;
   text-decoration: none;
   color: #f1f1f1;
   font-weight: 500;
@@ -427,9 +492,12 @@ body {
   align-items: center;
   justify-content: space-between;
   text-shadow: 0 0 5px rgba(0, 0, 0, 0.75);
+  font-family:'RBNo3.1 Book', sans-serif;
+  font-size: 1.125rem;
 }
+
 .service a img {
-  filter:drop-shadow(0px 0px 5px rgba(0,0,0,0.75));
+  filter: drop-shadow(0px 0px 5px rgba(0, 0, 0, 0.75));
 }
 
 #service_automotive {
