updated service pages to have dynamic page content

--- a/style.dev.scss
+++ b/style.dev.scss
@@ -288,6 +288,7 @@ textarea {
 :root {
   font-family: 'RBNo3.1 Light', sans-serif;
   font-size: 16px;
+  text-rendering: optimizeLegibility;
   --orange: #ef6423;
   --dark: #1a1a1a;
   --grey: #e8e6e6;
@@ -472,12 +473,21 @@ footer {
   color: var(--grey);
   transition: color 0.3s ease;
   border: none;
+
+
 }
+
+
 
 #social_icons img {
   width: auto;
   height: 2rem;
   /* filter: drop-shadow(0px 0px 5px rgba(0, 0, 0, 0.75)); */
+  transition: transform 0.3s ease;
+
+  &:hover {
+    transform: scale(1.05);
+  }
 }
 
 #home {
@@ -541,7 +551,7 @@ footer {
   margin: 0 auto;
 }
 
-#content_about {
+#content_about .content {
   background: #222;
 }
 
@@ -691,9 +701,12 @@ footer {
   transition: transform 0.3s ease;
 }
 
-.service:hover,
-.service:active {
+.service:hover {
   transform: scale(1.025);
+}
+
+.service:active {
+  transform: scale(0.95);
 }
 
 .service a {
@@ -936,6 +949,11 @@ footer {
 
   #about .content {
     grid-template-columns: 1fr;
+  }
+
+  #content_about .content {
+    margin-top: 1rem;
+    border-radius: 1rem;
   }
 
   footer {
