create 404 page, update frontpage #map container styles

--- a/style.dev.scss
+++ b/style.dev.scss
@@ -555,7 +555,8 @@ footer {
   background: #222;
 }
 
-#about {
+#about,
+#map {
   background-color: #222222;
   padding: 2rem 1rem;
   text-align: center;
