--- a/style.css
+++ b/style.css
@@ -848,6 +848,10 @@ footer {
     flex-direction: row;
     justify-content: end;
     align-items: center;
+    border-bottom-right-radius: 0.5rem;
+    border-bottom-left-radius: 0.5rem;
+    box-shadow: 0px 0.25rem 1rem rgba(0, 0, 0, 0.25);
+    background-color: color(srgb 0.17 0.17 0.17 / 0.48);
   }
 
   .nav-link {
